--- a/styles/index.css
+++ b/styles/index.css
@@ -175,7 +175,7 @@ section.wardrobe {
 section.images{
     width: 610px;
     margin: auto;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
 }
 
 .images .images-menu{
@@ -217,4 +217,8 @@ section.carousel-mobile{
     left: 0;
     right: 0;
     padding-bottom: 50px;
+}
+
+.footer{
+    padding-bottom: 30px;
 }
